--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Alata&display=swap");
 
 * {
-  font-family: 'Alata', 'Times New Roman', Times, serif;
-   }
+  font-family: "Alata", "Times New Roman", Times, serif;
+}
+
+p, label, h2 {
+  color: white;
+}
+
 body {
   display: flex;
   margin: 0;
-}
-
-h1 {
 }
 
 .leftContent {
@@ -17,18 +19,35 @@ h1 {
   width: 35%;
   height: 100vh;
   text-align: center;
-  background-image: url(images/stars.jpg);
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover; /* Resize the background image to cover the entire container */
+  background-image: url(images/endmods.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.signUpForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  gap: 20px;
+}
+
+.inputs {
+  display: flex;
+  gap: 30px;
+}
+
+input {
+  margin-bottom: 10px;
 }
 
 .leftLogo {
   position: relative;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.5);
   height: auto;
   top: 20vh;
-  color: purple;
+  color: #13f702;
 }
 
 img {
@@ -38,7 +57,34 @@ img {
 .rightContent {
   display: flex;
   flex-direction: column;
+  width: 65%;
+  padding: 4%;
+  background: black;
 }
+
+button {
+  display: inline-block;
+  outline: 0;
+  cursor: pointer;
+  border-radius: 6px;
+  border: 2px solid mediumpurple;
+  color: white;
+  background: 0 0;
+  padding: 8px;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 2px 4px 0px,
+    rgba(0, 0, 0, 0.05) 0px 1px 1.5px 0px;
+  font-weight: 800;
+  font-size: 16px;
+  height: 42px;
+  width: 150px;
+}
+
+
+button:hover {
+  background-color: mediumpurple;
+  color: #fff;
+}
+
 .help {
   display: none;
   font-size: 0.8em;
@@ -50,5 +96,25 @@ img {
 .inputField {
   display: flex;
   flex-direction: column;
-  max-width: 300px;
+  font-size: 14px;
+  border-radius: 6px;
+  line-height: 1.5;
+  padding: 5px 10px;
+  transition: box-shadow 100ms ease-in, border 100ms ease-in,
+    background-color 100ms ease-in;
+  border: 2px solid #dee1e2;
+  color: rgb(14, 14, 16);
+  background: #dee1e2;
+  display: block;
+  height: 16px;
+  width: 300px;
+}
+
+.inputField:hover {
+  border-color: #ccc;
+}
+
+.inputField:focus {
+  border-color: #9147ff;
+  background: #fff;
 }
